# copper-lead-triage

./: .gitignore  leads.json  phase0_review_sample.csv  pyproject.toml  request.py
backend/app/: main.py
backend/app/api/: __init__.py  deps.py  leads.py  reviews.py  runs.py
backend/app/clients/: enrichment.py  llm.py
backend/app/core/: config.py
backend/app/models/: analysis.py  db.py  lead.py
backend/app/repositories/: __init__.py  analyses.py  reviews.py  runs.py
backend/app/services/: batch.py  normalize.py  pipeline.py  review.py  rules.py  scoring.py  triage.py
backend/scripts/: build_review_sample.py  request.py  review_export.py  run_bulk.py  run_sample.py  verify_script_part2.py  write_dates.py  write_sample_leads.py
docs/: README.md  app_architecture.md  build_plan.md  copper_crm_analysis.md  crm_findings_for_verification.md  lead_database_findings.md  phase0_review_rubric.md  system_flow.md
docs/archive/: README.md  lead_database_findings.md
tests/: test_api_leads.py  test_api_reviews.py  test_api_runs.py  test_batch.py  test_pipeline.py  test_repositories.py  test_review.py  test_rules.py  test_triage_contracts.py
