[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "copper-lead-triage"
version = "0.1.0"
description = "An addon to Copper CRM which fills out missing data for leads"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "pydantic-ai",
    "logfire",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]
