[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "copper-lead-triage"
version = "0.1.0"
description = "An addon to Copper CRM which fills out missing data for leads"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "pydantic-ai",
    "logfire",
    "mem0ai",
    "sqlalchemy",
    "fastapi[standard]>=0.136.1",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.fastapi]
entrypoint = "backend.app.main:app"
